--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-env": "^2.4.1",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "nodemon": "^1.17.3"
   }
